# SocialRadar

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
config/: platforms.yaml
src/social_radar/: __init__.py  aggregator.py  cli.py  client.py  config.py  detail.py  platforms.py  retry.py  server.py  store.py  web.py
src/social_radar/templates/: content.html  index.html
