[project]
name = "social-radar"
version = "0.1.0"
description = "Multi-platform social media search via TikHub MCP, optimized for Xiaohongshu & Zhihu"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
social-radar = "social_radar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
